--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,7 +5,7 @@
     <title>Angular 2 App | ng2-webpack</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&v=3.exp&sensor=false"></script>
     <base href="/">
   </head>
   <body>
